--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,6 @@
 /* Imports */
 @import url("reset.css");
 @import url("pygment.css");
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&subset=latin);
 
 /***** Global *****/
 /* Body */
@@ -41,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
-    font-family: 'Yanone Kaffeesatz', arial, serif;
+	font-family: arial, serif;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
