--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,7 @@ body {
     text-align: left;
     max-width: 1440px;
     min-width: 1000px;
+    position: relative;
 }
 
 
@@ -44,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
-	
+
 hr { border: 2px solid #EEEEEE; }
 
 /* Anchors */
@@ -65,7 +66,7 @@ a:hover, a:active, a.active, .active>a {
 h1 a:hover {
     background-color: inherit
 }
-	
+
 /* Paragraphs */
 p {margin-bottom: 1.143em;}
 
@@ -385,7 +386,8 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 		.social a[href*='rss.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
 		.social a[href*='twitter.com']:before {content: url('../images/icons/twitter.png'); margin-right: 2px; vertical-align: -3px;}
 		.social a[href*='linkedin.com']:before {content: url('../images/icons/linkedin.png'); margin-right: 2px; vertical-align: -3px;}
-        .social a[href*='gitorious.org']:before {content: url('../images/icons/gitorious.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='gitorious.org']:before {content: url('../images/icons/gitorious.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='github.com']:before {content: url('../images/icons/github.png'); margin-right: 2px; vertical-align: -3px;}
 
 /*
 	About
