--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,7 @@
         {% include 'widget-blogroll.html'    %}
         {% include 'widget-sidedetails.html' %}
         {% include 'widget-categories.html'  %}
+        {% include 'widget-tagcloud.html'    %}
         </aside><!-- /#sidebar -->
 
         <footer id="footer" class="body">
