--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
         <aside id="featured"><article>
                 <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url
                 }}">{{ article.title }}</a></h1>
-                {% include 'article_infos.html' %}<!-- /.post-info -->
                 {{ article.content }}
+                {% include 'article_infos.html' %}
         </article></aside><!-- /#featured -->
         {% if loop.length  > 1 %}
-                <h1>Other articles</h1>
                 <hr />
+                <h1>Other articles</h1>
                     <ol id="posts-list" class="hfeed">
         {% endif %}
     {% else %}
@@ -26,9 +26,9 @@
                 </header>
 
                 <div class="entry-content">
-                {% include 'article_infos.html' %}<!-- /.post-info -->
                 {{ article.summary }}
                 <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
+                {% include 'article_infos.html' %}<!-- /.post-info -->
                 </div><!-- /.entry-content -->
         </article></li>
     {% endif %}
