--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,7 +37,7 @@ body {
 
 
 /* Headings */
-h1 {font-size: 2em }
+h1 {font-size: 1.8em }
 h2 {font-size: 1.571em}	/* 22px */
 h3 {font-size: 1.429em}	/* 20px */
 h4 {font-size: 1.286em}	/* 18px */
@@ -114,7 +114,7 @@ dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
 
-pre{background-color: #000; padding: 10px; color: #fff; margin: 10px; overflow: auto;}
+pre{background-color: #e6e6e6; padding: 10px; color: #000; margin: 10px; overflow: auto;}
 
 /* Quotes */
 blockquote {
@@ -127,22 +127,34 @@ q {}
 
 /* Tables */
 table {margin: .5em auto 1.5em auto; width: 98%;}
-	
-	/* Thead */
-	thead th {padding: .5em .4em; text-align: left; border: thin solid grey;}
-	thead td {border: thin solid grey;}
 
-	/* Tbody */
-	tbody td {padding: .5em .4em; border: thin solid grey;}
-	tbody th {border: thin solid grey;}
-	
-	tbody .alt td {}
-	tbody .alt th {}
-	
-	/* Tfoot */
-	tfoot th {}
-	tfoot td {}
-	
+/* Thead */
+thead th {
+	padding: .55em .4em .3em .4em;
+	text-align: left;
+	border-bottom: thin solid #ccc;
+
+	text-transform: uppercase;
+	font-size: 85%;
+	font-weight:normal;
+	letter-spacing: 0.03em;
+	color: #5c5c5c;
+}
+thead td {
+	border-bottom: thin solid #ccc;
+}
+
+/* Tbody */
+tbody td {padding: .55em .4em; border-bottom: thin solid #ccc;}
+tbody th {border-bottom: thin solid #ccc;}
+
+tbody .alt td {}
+tbody .alt th {}
+
+/* Tfoot */
+tfoot th {}
+tfoot td {}
+
 /* HTML5 tags */
 header, section, footer,
 aside, nav, article, figure {
@@ -479,7 +491,7 @@ ul.tagcloud .list-group-item <span>.badge {
 li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 #content > .hentry {padding: 1em 0;}
 .hentry img{display : none ;}
-.entry-title {font-size: 3em; margin-bottom: 25px; margin-top: 0;}
+.entry-title {font-size: 2.8em; margin-bottom: 25px; margin-top: 0;}
 .entry-title a:link, .entry-title a:visited {text-decoration: none; color: #333;}
 .entry-title a:visited {background-color: #fff;}
 
