--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,8 @@
         </article></aside><!-- /#featured -->
         {% if loop.length  > 1 %}
                 <hr />
-                <h1>Other articles</h1>
+                <h1 id="older-articles">Older articles</h1>
+                <hr />
                     <ol id="posts-list" class="hfeed">
         {% endif %}
     {% else %}
