--- a/static/css/main.css
+++ b/static/css/main.css
@@ -114,7 +114,8 @@ dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
 
-pre{background-color: #e6e6e6; padding: 10px; color: #000; margin: 10px; overflow: auto;}
+pre {background-color: #e6e6e6; padding: 10px; color: #000; margin: 10px; overflow: auto; font-size:110%; }
+code { font-size: 110%; }
 
 /* Quotes */
 blockquote {
@@ -338,7 +339,7 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	padding: 20px 3.5%;
 	min-width: 500px;
 	width: 55%;
-	font-size: 105%;
+	font-size: 107%;
 }
 
 /*
