Append/prepend blog title name to the title of the pages

--- a/templates/category.html
+++ b/templates/category.html
@@ -1,2 +1,4 @@
 {% extends "index.html" %}
-{% block title %}{{ SITENAME }} - {{ category }}{% endblock %}
+{% block title %}
+{% if BLOGTITLE %}{{ BLOGTITLE }}{% else %}{{ SITENAME }}{% endif %} - {{ category }}
+{%endblock%}
