Remove unused code / sections

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,7 @@
                 {% include 'article_infos.html' %}
         </article></aside><!-- /#featured -->
         {% if loop.length  > 1 %}
-                <hr />
-                <h1 id="older-articles">Older articles</h1>
-                <hr />
+                <hr class="featured-separator" />
                     <ol id="posts-list" class="hfeed">
         {% endif %}
     {% else %}
