--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,3 @@
-/*
-	Name: Smashing HTML5
-	Date: July 2009
-	Description: Sample layout for HTML5 and CSS3 goodness.
-	Version: 1.0
-	Author: Enrique Ramírez
-	Autor URI: http://enrique-ramirez.com
-*/
-
 /* Imports */
 @import url("reset.css");
 @import url("pygment.css");
@@ -64,10 +55,8 @@ a:link, a:visited {
 	text-decoration: none;
 }
 a:hover, a:active, a.active, .active>a {
-	/*background-color: #9d1f1f;*/
-	color: #2121bf;
+	color: #321f9d;
 	text-decoration: underline;
-	/*text-shadow: 1px 1px 1px #333;*/
 }
 
 h1 a:hover {
@@ -175,6 +164,7 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	padding: 2.5em 0 0 0;
 }
 
+/* Title */
 #banner a:link, #banner a:visited, #banner a:hover, #banner a:active {
 	display: block;
 	margin: 0 auto 0 auto;
@@ -197,133 +187,124 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	-webkit-border-top-right-radius: 5px;
 }
 
-	/* Banner */
-	#banner h1 {
-        font-size: 3.571em; 
-        line-height: 0;
-	    margin: 0 auto 0 auto;
-    }
-	#banner h1 a:link, #banner h1 a:visited {
-		color: #000305;
-		display: block;
-		font-weight: bold;
-		margin: 0 auto .6em auto;
-		text-decoration: none;
-		width: 90%;
-	}
-	#banner h1 a:hover, #banner h1 a:active {
-		background: none;
-		color: #c74350;
-		text-shadow: none;
-	}
+#banner h1 {
+	font-size: 3.571em; 
+	line-height: 0;
+	margin: 0 auto 0 auto;
+}
+
+#banner h1 a:link, #banner h1 a:visited {
+	color: #000305;
+	display: block;
+	font-weight: bold;
+	margin: 0 auto .6em auto;
+	text-decoration: none;
+	width: 90%;
+}
+#banner h1 a:hover, #banner h1 a:active {
+	background: none;
+	color: #c74350;
+	text-shadow: none;
+}
+
+#banner h1 strong {font-size: 0.36em; font-weight: normal;}
 	
-	#banner h1 strong {font-size: 0.36em; font-weight: normal;}
+/* Main Nav */
+#banner nav {
+	background: #000305;
+	font-size: 1.143em;
+	height: 40px;
+	line-height: 30px;
+	margin: 0 auto 2em auto;
+	padding: 0;
+	width: 90%;
 	
-	/* Main Nav */
-	#banner nav {
-		background: #000305;
-		font-size: 1.143em;
-		height: 40px;
-		line-height: 30px;
-		margin: 0 auto 2em auto;
-		padding: 0;
-		width: 90%;
-		
-		border-bottom-left-radius: 5px;
-		-moz-border-bottom-left-radius: 5px;
-		-webkit-border-bottom-left-radius: 5px;
-		
-		border-bottom-right-radius: 5px;
-		-moz-border-bottom-right-radius: 5px;
-		-webkit-border-bottom-right-radius: 5px;
-	}
-
-	#banner nav.bothround {
-		border-top-left-radius: 5px;
-		-moz-border-top-left-radius: 5px;
-		-webkit-border-top-left-radius: 5px;
-		
-		border-top-right-radius: 5px;
-		-moz-border-top-right-radius: 5px;
-		-webkit-border-top-right-radius: 5px;
-	}
+	border-bottom-left-radius: 5px;
+	-moz-border-bottom-left-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
 	
-	#banner nav ul {
-		list-style: none;
-		margin: 0 auto;
-	}
+	border-bottom-right-radius: 5px;
+	-moz-border-bottom-right-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;
+}
 
-	#banner nav > ul > li {
-		float: left;
-		display: inline;
-		margin: 0;
-		position:relative;
-	}
-
-	#banner nav > ul > li > a {
-		height: 30px;
-		display: inline-block;
-	}
+#banner nav.bothround {
+	border-top-left-radius: 5px;
+	-moz-border-top-left-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
 	
-	#banner nav li > a:link, #banner nav li > a:visited {
-		color: #fff;
-		padding: 5px 1.5em;
-		text-decoration: none;
-	}
+	border-top-right-radius: 5px;
+	-moz-border-top-right-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+}
 
-	#banner nav li > a:hover, #banner nav li > a:active, 
-	#banner nav .active > a:link, #banner nav .active > a:visited {
-		background: #9d0d0d; /*C74451;*/
-		color: #fff;
-		text-shadow: none !important;
-	}
+#banner nav ul {
+	list-style: none;
+	margin: 0 auto;
+}
+
+#banner nav > ul > li {
+	float: left;
+	display: inline;
+	margin: 0;
+	position:relative;
+}
+
+#banner nav > ul > li > a {
+	height: 30px;
+	display: inline-block;
+}
+
+#banner nav li > a:link, #banner nav li > a:visited {
+	color: #fff;
+	padding: 5px 1.5em;
+	text-decoration: none;
+}
+
+#banner nav li > a:hover, #banner nav li > a:active, 
+#banner nav .active > a:link, #banner nav .active > a:visited {
+	background: #9d0d0d; /*C74451;*/
+	color: #fff;
+	text-shadow: none !important;
+}
+
+#banner nav > ul > li:first-child a {
+	border-top-left-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-webkit-border-top-left-radius: 5px;
 	
-	#banner nav > ul > li:first-child a {
-		border-top-left-radius: 5px;
-		-moz-border-radius-topleft: 5px;
-		-webkit-border-top-left-radius: 5px;
-		
-		border-bottom-left-radius: 5px;
-		-moz-border-radius-bottomleft: 5px;
-		-webkit-border-bottom-left-radius: 5px;
-	}
+	border-bottom-left-radius: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+}
 
-	#banner nav li:hover .dropdown {
-		z-index:1;
-		opacity:1;
-	}
+#banner nav li:hover .dropdown {
+	z-index:1;
+	opacity:1;
+}
 
-	#banner nav .dropdown {
-		position:absolute;
-		top:100%;
-		left:0px;
-		z-index:-1;
-		opacity:0;
-		transition:opacity linear 0.15s;
-		box-shadow:0px 2px 3px rgba(0,0,0,0.2);
-		background:#2e2728;
-		font-size: 0.93em;
-	}
+#banner nav .dropdown {
+	position:absolute;
+	top:100%;
+	left:0px;
+	z-index:-1;
+	opacity:0;
+	transition:opacity linear 0.15s;
+	box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+	background:#2e2728;
+	font-size: 0.93em;
+}
 
-	#banner nav .dropdown li {
-		display:block;
-		width:210px;
-		border-top: 1.5px solid #353232;
-	}
+#banner nav .dropdown li {
+	display:block;
+	width:210px;
+	border-top: 1.5px solid #353232;
+}
 
-	#banner nav .dropdown li > a {
-		display:block;
-		padding: 4px 1.0em;
-	}
-
-	/*
-	#banner nav .dropdown li > a:hover,
-	#banner nav .dropdown li > a:active,
-	#banner nav .dropdown .active > a:link,
-	#banner nav .dropdown .active > a:visited {
-		background: #b73441;
-	}
-	*/
+#banner nav .dropdown li > a {
+	display:block;
+	padding: 4px 1.0em;
+}
 
 
 /**************************
@@ -345,8 +326,8 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 }
 
 /*
-	Extras
-*****************/
+ * Sidebar and widgets
+ */
 #sidebar {
 	float: right;
 	margin: 1em 7% 2em 10px;
@@ -378,6 +359,13 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	text-decoration: none;
 	padding: .3em .25em;
 }
+
+#sidebar a:hover, #sidebar a:active {
+	color: #fff;
+	background-color: #bd2b2b;
+	text-decoration:none
+}
+
 #sidebar li.active a {color: white;}
 
 #sidebar li:last-child,
@@ -388,35 +376,30 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 #sidebar .blogroll li:nth-last-child(2) a,
 #sidebar .blogroll li:nth-last-child(3) a {border: 0;}
 
-#sidebar a:hover, #sidebar a:active {
-	color: #fff;
-	background-color: #bd2b2b;
-	text-decoration:none
-}
-
 /* Blogroll */
 #sidebar .blogroll {
 	width: 100%;
 }
 
+/* Social */
 .social a {
 	background-repeat: no-repeat;
 	background-position: 3px 6px;
 }
 
-	/* Icons */
-	.social a[href*='delicious.com']:before {content: url('../images/icons/delicious.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='digg.com']:before {content: url('../images/icons/digg.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='facebook.com']:before {content: url('../images/icons/facebook.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='atom.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='last.fm']:before, .social a[href*='lastfm.']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='jamendo.com']:before {content: url('../images/icons/jamendo.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='stackoverflow.com']:before {content: url('../images/icons/stackoverflow.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='rss.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='twitter.com']:before {content: url('../images/icons/twitter.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='linkedin.com']:before {content: url('../images/icons/linkedin.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='gitorious.org']:before {content: url('../images/icons/gitorious.png'); margin-right: 2px; vertical-align: -3px;}
-	.social a[href*='github.com']:before {content: url('../images/icons/github.png'); margin-right: 2px; vertical-align: -3px;}
+/* Social icons */
+.social a[href*='delicious.com']:before {content: url('../images/icons/delicious.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='digg.com']:before {content: url('../images/icons/digg.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='facebook.com']:before {content: url('../images/icons/facebook.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='atom.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='last.fm']:before, .social a[href*='lastfm.']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='jamendo.com']:before {content: url('../images/icons/jamendo.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='stackoverflow.com']:before {content: url('../images/icons/stackoverflow.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='rss.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='twitter.com']:before {content: url('../images/icons/twitter.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='linkedin.com']:before {content: url('../images/icons/linkedin.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='gitorious.org']:before {content: url('../images/icons/gitorious.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='github.com']:before {content: url('../images/icons/github.png'); margin-right: 2px; vertical-align: -3px;}
 
 /* Tagcloud */
 ul.tagcloud {
@@ -467,14 +450,6 @@ ul.tagcloud .list-group-item <span>.badge {
 	-webkit-border-radius: 10px;
 }
 
-#about .primary {float: left; width: 165px;}
-#about .primary strong {color: #C64350; display: block; font-size: 1.286em;}
-#about .photo {float: left; margin: 5px 20px;}
-
-#about .url:link, #about .url:visited {text-decoration: none;}
-
-#about .bio {float: right; width: 500px;}
-
 /****************
  *    Footer    *
  ****************/
@@ -486,8 +461,9 @@ ul.tagcloud .list-group-item <span>.badge {
     margin: 20px auto;
 }
 
-/***** Sections *****/
-/* Blog */
+/*
+ * Blog categories or index
+ */
 .hentry {
 	border-bottom: 1px solid #eee;
 	padding: 1.5em 0;
@@ -495,86 +471,37 @@ ul.tagcloud .list-group-item <span>.badge {
 li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 #content > .hentry {padding: 1em 0;}
 .hentry img{display : none ;}
+
+/* Featured article or title of article */
 .entry-title {font-size: 2.8em; margin-bottom: 25px; margin-top: 0;}
 .entry-title a:link, .entry-title a:visited { text-decoration:none; color: #000305 }
 .entry-title a:visited {background-color: #fff;}
 .entry-title a:hover, .entry-title a:active { color: #9d1f1f; text-shadow: none; }
 
-#older-articles {
-	padding-left:10px;
-	font-size: 2.4em;
-	margin-bottom:2px;
-	margin-top: 30px;
-	color: #555;
+/* Separator between featured and further articles list */
+.featured-separator {
+	border: 3px solid #EEEEEE;
+	margin-top: 4em;
 }
 
+/** Further entries */
 .hentry header a:link, .hentry header a:visited {text-decoration:none; color: #000305 }
-.hentry header a:hover, .hentry header a:active { color: #9d1f1f;  }
+.hentry header a:hover, .hentry header a:active { color: #9d1f1f; text-shadow:none; }
+.hentry header h1 { font-size: 2.2em; }
 
+
+/** TODO These and below I have no clue what they do */
 .hentry .post-info * {font-style: normal;}
 
-	/* Content */
-	.hentry footer {margin-bottom: 2em;}
+/* Content */
+.hentry footer {margin-bottom: 2em;}
 
-	.hentry footer address {display: inline;}
-	#posts-list footer address {display: block;}
+.hentry footer address {display: inline;}
+#posts-list footer address {display: block;}
 
-	/* Blog Index */
-	#posts-list {list-style: none; margin: 0;}
-	#posts-list .hentry {padding-left: 10px; position: relative;}
-	
-	#posts-list footer {
-		width: 85%;
-	}
-	
-	/* About the Author */
-	#about-author {
-		background: #f9f9f9;
-		clear: both;
-		font-style: normal;
-		margin: 2em 0;
-		padding: 10px 20px 15px 20px;
-		
-		border-radius: 5px;
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-	}
-	
-	#about-author strong {
-		color: #C64350;
-		clear: both;
-		display: block;
-		font-size: 1.429em;
-	}
-	
-	#about-author .photo {border: 1px solid #ddd; float: left; margin: 5px 1em 0 0;}
-	
-	/* Comments */
-	#comments-list {list-style: none; margin: 0 1em;}
-	#comments-list blockquote {
-		background: #f8f8f8;
-		clear: both;
-		font-style: normal;
-		margin: 0;
-		padding: 15px 20px;
-		
-		border-radius: 5px;
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-	}
-	#comments-list footer {color: #888; padding: .5em 1em 0 0; text-align: right;}
-	
-	#comments-list li:nth-child(2n) blockquote {background: #F5f5f5;}
-	
-	/* Add a Comment */
-	#add-comment label {clear: left; float: left; text-align: left; width: 150px;}
-	#add-comment input[type='text'],
-	#add-comment input[type='email'],
-	#add-comment input[type='url'] {float: left; width: 200px;}
-	
-	#add-comment textarea {float: left; height: 150px; width: 495px;}
-	
-	#add-comment p.req {clear: both; margin: 0 .5em 1em 0; text-align: right;}
-	
-	#add-comment input[type='submit'] {float: right; margin: 0 .5em;}
-	#add-comment * {margin-bottom: .5em;}
+#posts-list {list-style: none; margin: 0;}
+#posts-list .hentry {padding-left: 10px; position: relative;}
+
+#posts-list footer {
+	width: 85%;
+}
