--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,7 +103,14 @@ dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
 
-pre {background-color: #e6e6e6; padding: 10px; color: #000; margin: 10px; overflow: auto; font-size:110%; }
+pre {
+	background-color: #f0f0ed;
+	padding: 10px;
+	color: #000;
+	margin: 10px;
+	overflow: auto;
+	font-size:110%;
+}
 code { font-size: 110%; }
 
 /* Quotes */
@@ -128,7 +135,7 @@ thead th {
 	font-size: 85%;
 	font-weight:normal;
 	letter-spacing: 0.03em;
-	color: #5c5c5c;
+	color: #707070;
 }
 thead td {
 	border-bottom: thin solid #ccc;
