--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ page.title }}{% endblock %}
 {% block content %}
-<section id="content" class="body">    
-    <h1 class="entry-title">{{ page.title }}</h1>
+<section id="content" class="body">
+    <h1 class="entry-title"><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></h1>
     {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">get
     the pdf</a>{% endif %}
 {% block pagecontent %}
