--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,24 +25,21 @@ body {
     position: relative;
 }
 
-
-
 /* Headings */
-h1 {font-size: 1.8em }
-h2 {font-size: 1.571em}	/* 22px */
-h3 {font-size: 1.429em}	/* 20px */
-h4 {font-size: 1.286em}	/* 18px */
-h5 {font-size: 1.143em}	/* 16px */
-h6 {font-size: 1em}	/* 14px */
+h1 {font-size: 1.7em }
+h2 {font-size: 1.571em}  /* 22px */
+h3 {font-size: 1.429em}  /* 20px */
+h4 {font-size: 1.286em}  /* 18px */
+h5 {font-size: 1.143em}  /* 16px */
+h6 {font-size: 1em}      /* 14px */
 
 h1, h2, h3, h4, h5, h6 {
-	font-weight: 400;
-	line-height: 1.1;
-	margin-bottom: .8em;
-	font-family: arial, serif;
+    font-weight: 400;
+    line-height: 1.1;
+    margin-top: 1em;
+    margin-bottom: .4em;
+    font-family: arial, serif;
 }
-
-h3, h4, h5, h6 { margin-top: .8em; }
 
 hr { border: 2px solid #EEEEEE; }
 
@@ -119,7 +116,6 @@ blockquote {
     font-style: italic;
 }
 cite {}
-
 q {}
 
 /* Tables */
